--- a/app/src/main/res/layout/general_confirm_dialog.xml
+++ b/app/src/main/res/layout/general_confirm_dialog.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:gravity="center"
-        android:text="Are you sure you want to go back?"
+        android:text="@string/general_dialog_text"
         android:textColor="@color/white"
         android:textSize="20sp" />
 
