--- a/app/src/main/res/layout/profile_update.xml
+++ b/app/src/main/res/layout/profile_update.xml
@@ -59,7 +59,8 @@
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/label_firstName" />
+            app:layout_constraintTop_toBottomOf="@id/label_firstName"
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <TextView
             android:id="@+id/label_lastName"
@@ -78,6 +79,7 @@
             android:layout_height="48dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/btn_white_rounded"
+            android:hint="@string/last_name"
             android:inputType="textPersonName"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
@@ -109,15 +111,14 @@
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/label_staffNo" />
+            app:layout_constraintTop_toBottomOf="@id/label_staffNo"
+            tools:ignore="DuplicateClickableBoundsCheck,SpeakableTextPresentCheck" />
 
         <androidx.constraintlayout.widget.Group
             android:id="@+id/group_nurse_fields"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
-            app:constraint_referenced_ids="label_staffNo, editText_staffNo"
-            tools:visibility="gone" />
+            app:constraint_referenced_ids="label_staffNo,editText_staffNo" />
 
         <TextView
             android:id="@+id/label_studentNo"
@@ -142,94 +143,84 @@
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/label_studentNo" />
+            app:layout_constraintTop_toBottomOf="@id/label_studentNo"
+            tools:ignore="SpeakableTextPresentCheck" />
 
-        <TextView
-            android:id="@+id/label_medicationReq"
-            android:layout_width="wrap_content"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/textField_medication"
+            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/medicationReq"
-            android:textColor="@color/yellow"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/editText_studentNo" />
-
-        <LinearLayout
-            android:id="@+id/layout_medicationCheckboxes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintBottom_toBottomOf="@id/label_medicationReq"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/label_medicationReq">
-            <CheckBox
-                android:id="@+id/checkbox_medicationYes"
-                android:layout_width="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/editText_studentNo">
+
+            <AutoCompleteTextView
+                android:id="@+id/autoComplete_medication"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/yes"
-                android:textColor="@color/white" />
-            <CheckBox
-                android:id="@+id/checkbox_medicationNo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/no"
-                android:textColor="@color/white" />
-        </LinearLayout>
+                android:background="@drawable/btn_white_rounded"
+                android:hint="@string/medication"
+                android:inputType="none"
+                android:textColor="@color/black"
+                tools:ignore="SpeakableTextPresentCheck" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:id="@+id/label_foodReq"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="24dp"
             android:text="@string/foodReq"
             android:textColor="@color/yellow"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/label_medicationReq" />
+            app:layout_constraintTop_toBottomOf="@id/textField_medication" />
 
-        <LinearLayout
-            android:id="@+id/layout_foodCheckboxes"
-            android:layout_width="wrap_content"
+        <RadioGroup
+            android:id="@+id/radioGroup_foodReq"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="@id/label_foodReq"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/label_foodReq"
             app:layout_constraintTop_toTopOf="@id/label_foodReq">
-            <CheckBox
-                android:id="@+id/checkbox_foodYes"
+
+            <RadioButton
+                android:id="@+id/radioButton_foodYes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/yes"
                 android:textColor="@color/white" />
-            <CheckBox
-                android:id="@+id/checkbox_foodNo"
+
+            <RadioButton
+                android:id="@+id/radioButton_foodNo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/no"
                 android:textColor="@color/white" />
-        </LinearLayout>
+        </RadioGroup>
 
         <androidx.constraintlayout.widget.Group
             android:id="@+id/group_student_fields"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
-            app:constraint_referenced_ids="label_studentNo, editText_studentNo, label_medicationReq, layout_medicationCheckboxes, label_foodReq, layout_foodCheckboxes"
-            tools:visibility="gone" />
+            app:constraint_referenced_ids="label_studentNo,editText_studentNo,textField_medication,label_foodReq,radioGroup_foodReq" />
 
         <androidx.constraintlayout.widget.Barrier
             android:id="@+id/barrier_role_specific_fields"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:barrierDirection="bottom"
-            app:constraint_referenced_ids="editText_staffNo, layout_foodCheckboxes" />
+            app:constraint_referenced_ids="editText_staffNo,radioGroup_foodReq" />
 
         <TextView
             android:id="@+id/label_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="24dp"
             android:text="@string/username"
             android:textColor="@color/yellow"
             android:textSize="20sp"
@@ -242,6 +233,7 @@
             android:layout_height="48dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/btn_white_rounded"
+            android:hint="@string/user_type"
             android:inputType="text"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
@@ -267,6 +259,7 @@
             android:layout_height="48dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/btn_white_rounded"
+            android:hint="@string/Password"
             android:inputType="textPassword"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
