--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="blue">#103a5c</color>
     <color name="yellow">#f9b42a</color>
     <color name="darkblue">#0b2647</color>
+    <color name="red">#FF0000</color>
 
 </resources>
