--- a/app/src/main/res/layout/profile_create.xml
+++ b/app/src/main/res/layout/profile_create.xml
@@ -123,31 +123,54 @@
                 android:inputType="number"
                 android:padding="12dp" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textField_medication"
-                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/medicationLabel"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:hint="@string/medicationReq"
+                android:text="@string/medicationReq"
+                android:textColor="@color/yellow"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-                app:boxBackgroundColor="@color/white"
-                app:boxCornerRadiusBottomEnd="24dp"
-                app:boxCornerRadiusBottomStart="24dp"
-                app:boxCornerRadiusTopEnd="24dp"
-                app:boxCornerRadiusTopStart="24dp"
-                app:boxStrokeWidth="0dp"
-                app:boxStrokeWidthFocused="0dp">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/medicationSpinnerContainer"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="4dp"
+                android:background="@drawable/btn_white_rounded"
+                app:layout_constraintTop_toBottomOf="@id/medicationLabel">
 
                 <AutoCompleteTextView
                     android:id="@+id/autoComplete_medication"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/transparent"
                     android:inputType="none"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="40dp"
                     android:textColor="@color/black"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
                     tools:ignore="SpeakableTextPresentCheck" />
 
-            </com.google.android.material.textfield.TextInputLayout>
+                <ImageView
+                    android:id="@+id/medicationDropdownArrow"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginEnd="8dp"
+                    android:contentDescription="@string/Drop_down_arrow"
+                    android:src="@drawable/icon_arrow"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.433"
+                    app:tint="@color/black" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
             <TextView
                 android:id="@+id/textView_foodReq"
                 android:layout_width="wrap_content"
