--- a/app/src/main/res/layout/profile_delete_dialog.xml
+++ b/app/src/main/res/layout/profile_delete_dialog.xml
@@ -1,33 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bg_dialog_rounded"
+    android:background="@drawable/bg_dialog_rounded_white"
     android:padding="24dp">
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="98dp"
-        android:layout_height="84dp"
-        android:contentDescription="@string/logo"
-        android:src="@drawable/icon_logo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/confirmationMessageTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:gravity="center"
         android:text="@string/delete_account_message"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageView" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/negativeButton"
@@ -36,28 +27,28 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
-        android:text="@string/Cancel"
-        android:textColor="@color/yellow"
         android:padding="12dp"
-        app:cornerRadius="24dp"
+        android:text="@string/Cancel"
+        android:textColor="@color/blue"
         android:textSize="20sp"
+        app:cornerRadius="24dp"
         app:layout_constraintEnd_toStartOf="@+id/positiveButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/confirmationMessageTextView"
-        app:strokeWidth="2dp"
-        app:strokeColor="@color/yellow" />
+        app:strokeColor="@color/blue"
+        app:strokeWidth="2dp" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/positiveButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:backgroundTint="@color/yellow"
-        android:textSize="20sp"
+        android:backgroundTint="@color/blue"
+        android:padding="12dp"
         android:text="@string/yes"
         android:textColor="@color/white"
+        android:textSize="20sp"
         app:cornerRadius="24dp"
-        android:padding="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/negativeButton"
         app:layout_constraintTop_toTopOf="@+id/negativeButton" />
