--- a/app/src/main/res/layout/appnt_view_stu.xml
+++ b/app/src/main/res/layout/appnt_view_stu.xml
@@ -122,7 +122,7 @@
         android:textColor="@color/white"
         android:textSize="20sp"
         android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@id/cancelAppointmentButton"
+        app:layout_constraintBottom_toTopOf="@+id/negativeButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/titleTextView"
@@ -135,7 +135,7 @@
         android:layout_height="63dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="280dp"
+        android:layout_marginBottom="320dp"
         android:backgroundTint="@color/yellow"
         android:padding="12dp"
         android:text="@string/cancel_appointment_button_text"
@@ -153,9 +153,11 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/negativeButton"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-        android:layout_width="330dp"
-        android:layout_height="63dp"
-        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="164dp"
         android:padding="12dp"
         android:text="@string/Cancel"
         android:textColor="@color/yellow"
@@ -163,10 +165,8 @@
         app:cornerRadius="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cancelAppointmentButton"
-        app:layout_constraintVertical_bias="0.143"
         app:strokeColor="@color/yellow"
         app:strokeWidth="2dp" />
 
